# multiple_objects_dkluter_ai

./: .gitignore  app.py  detect_objects.py  generate_metadata.py  generate_object.py  pyproject.toml  requirements.txt
